fixes paging url

--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,5 @@ plugins:
     - jekyll-sitemap
     ##- octopress-paginate
 paginate: 5
-paginate_path: "page:num"
+paginate_path: "page-:num/"
 future: true
