--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -88,3 +88,15 @@
   url: kcl.html
   attendance: 108
   
+- name: Centrica
+  version: v4.2
+  date: 24/06/2024
+  url: centrica.html
+  attendance: 33
+  
+- name: Tech West Midlands
+  version: v4.3
+  date: 01/07/2024
+  url: tech-wm.html
+  attendance: ??
+  
